--- a/src/Components/Cartitems/CartItems.css
+++ b/src/Components/Cartitems/CartItems.css
@@ -1,10 +1,12 @@
 .cartitems{
     margin: 100px 10%;
+    color:#eaeaea;
 }
 .cartitems hr{
     height: 2px;
     background: #e2e2e2;
     border: 0;
+    color:#eaeaea;
 }
 .cartitems-format-main{
     display: grid;
@@ -12,7 +14,7 @@
     align-items: center;
     gap: 50px;
     padding: 20px 0px;
-    color: #454545;
+    color:#eaeaea;
     font-size: 16px;
     font-weight: 600;
 }
@@ -54,8 +56,9 @@
     width: 220px;
     height: 50px;
     outline: none;
-    border: none;
-    background: #ff5a5a;
+    border: 2px solid;
+    border-radius:4px;
+    background: transparent;
     color: #fff;
     font-size: 14px;
     font-weight: 600;
@@ -67,7 +70,7 @@
     font-weight: 500;
 }
 .cartitems-promocode p{
-    color: #555;
+    color:#eaeaea;
 }
 .cartitems-promobox{
     display: flex;
@@ -84,6 +87,7 @@
     background: transparent;
     font-size: 16px;
     flex: 1;
+    color:#eaeaea;
     height: 100%;
     padding-left: 20px;
 }
